@@ -884,9 +884,9 @@ img.icon {
         width: max-content;
         max-width: 80ch;
     }
-    .form-char, .form-password, .form-integer, .form-float, .form-timedelta,
-    .form-selection, .form-multiselection, .form-url, .form-email,
-    .form-callto, .form-sip, .form-pyson {
+    .form-char, .form-password, .form-color, .form-integer, .form-float,
+    .form-timedelta, .form-selection, .form-multiselection, .form-url,
+    .form-email, .form-callto, .form-sip, .form-pyson {
         input, select {
             min-width: 8ch;
         }
