@@ -1,3 +1,4 @@
+* Support color widget on form view
 
 Version 7.4.0 - 2024-11-04
 --------------------------
